--- a/src/app/dashboard/formateur/table/table.component.html
+++ b/src/app/dashboard/formateur/table/table.component.html
@@ -1,19 +1,20 @@
-<div class="container-fluid py-4">
-    <div class="row">
-      <div class="col-12">
-        <div class="card mb-4">
+
           <div class="card-header pb-0">
-            <h6>Authors table</h6>
+            <h6 class="fs-4 fw-bolder">Formateur table 
+
+              <a routerLink="/dashboard/Formateur/form" routerLinkActive="active" href="#" class="btn btn-primary" tabindex="-1" aria-disabled="true" role="button" data-bs-toggle="button" style="margin-left: 600px;">Add Formateur</a>
+            </h6>
+            
           </div>
           <div class="card-body px-0 pt-0 pb-2">
             <div class="table-responsive p-0">
               <table class="table align-items-center mb-0">
                 <thead>
                   <tr>
-                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Author</th>
-                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Function</th>
-                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Status</th>
-                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Employed</th>
+                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Nom</th>
+                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">Competences</th>
+                    <th class="text-center text-uppercase text-secondary text-xxs font-weight-bolder opacity-7">Remarques</th>
+                    <th class="text-secondary opacity-7"></th>
                     <th class="text-secondary opacity-7"></th>
                   </tr>
                 </thead>
@@ -21,27 +22,28 @@
                   <tr *ngFor="let student of formateurs">
                     <td>
                       <div class="d-flex px-2 py-1">
-                        <div>
-                          <img src="../assets/img/team-2.jpg" class="avatar avatar-sm me-3" alt="user1">
-                        </div>
+                        
                         <div class="d-flex flex-column justify-content-center">
                           <h6 class="mb-0 text-sm">{{ student.nom }}</h6>
-                          <p class="text-xs text-secondary mb-0">john-tim.com</p>
                         </div>
                       </div>
                     </td>
                     <td>
-                      <p class="text-xs font-weight-bold mb-0">Manager</p>
-                      <p class="text-xs text-secondary mb-0">Organization</p>
+                      <p class="text-xs font-weight-bold mb-0">{{ student.competences }}</p>
+                      
                     </td>
                     <td class="align-middle text-center text-sm">
-                      <span class="badge badge-sm bg-gradient-success">Online</span>
-                    </td>
-                    <td class="align-middle text-center">
-                      <span class="text-secondary text-xs font-weight-bold">23/04/18</span>
+                      <h6 class="mb-0 text-sm">{{ student.remarques }}</h6>
                     </td>
                     <td class="align-middle">
-                      <a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
+                      <a href="javascript:;" class="font-weight-bold text-xs btn btn-bleu" data-toggle="tooltip" data-original-title="Delete user"
+                        (click)="deleteFormateur(student.id)">
+                        Delete
+                      </a>
+                    </td>
+                    <td class="align-middle">
+                      <a href="javascript:;" class="font-weight-bold text-xs btn btn-primary" data-toggle="tooltip" data-original-title="Edit user"
+                        (click)="editFormateur(student.id)">
                         Edit
                       </a>
                     </td>
@@ -51,40 +53,4 @@
               </table>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-
-    <footer class="footer pt-3  ">
-      <div class="container-fluid">
-        <div class="row align-items-center justify-content-lg-between">
-          <div class="col-lg-6 mb-lg-0 mb-4">
-            <div class="copyright text-center text-sm text-muted text-lg-start">
-              © <script>
-                document.write(new Date().getFullYear())
-              </script>,
-              made with <i class="fa fa-heart"></i> by
-              <a href="https://www.creative-tim.com" class="font-weight-bold" target="_blank">Creative Tim</a>
-              for a better web.
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <ul class="nav nav-footer justify-content-center justify-content-lg-end">
-              <li class="nav-item">
-                <a href="https://www.creative-tim.com" class="nav-link text-muted" target="_blank">Creative Tim</a>
-              </li>
-              <li class="nav-item">
-                <a href="https://www.creative-tim.com/presentation" class="nav-link text-muted" target="_blank">About Us</a>
-              </li>
-              <li class="nav-item">
-                <a href="https://www.creative-tim.com/blog" class="nav-link text-muted" target="_blank">Blog</a>
-              </li>
-              <li class="nav-item">
-                <a href="https://www.creative-tim.com/license" class="nav-link pe-0 text-muted" target="_blank">License</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </footer>
-  </div>
+        
