--- a/src/app/dashboard/main/main.component.html
+++ b/src/app/dashboard/main/main.component.html
@@ -1,17 +1,17 @@
 
   <!-- End Navbar -->
   <div class="container-fluid py-4">
-    <div class="row">
+    <div class="row " style="padding-left: 100px;">
       <div class="col-xl-3 col-sm-6 mb-xl-0 mb-4">
         <div class="card">
           <div class="card-body p-3">
             <div class="row">
               <div class="col-8">
                 <div class="numbers">
-                  <p class="text-sm mb-0 text-capitalize font-weight-bold">Today's Money</p>
+                  <p class="text-sm mb-0 text-capitalize font-weight-bold">Nombre Formateur</p>
                   <h5 class="font-weight-bolder mb-0">
-                    $53,000
-                    <span class="text-success text-sm font-weight-bolder">+55%</span>
+                    {{ numberOfFormateurs }}
+                    
                   </h5>
                 </div>
               </div>
@@ -30,10 +30,10 @@
             <div class="row">
               <div class="col-8">
                 <div class="numbers">
-                  <p class="text-sm mb-0 text-capitalize font-weight-bold">Today's Users</p>
+                  <p class="text-sm mb-0 text-capitalize font-weight-bold">Nombre Formation</p>
                   <h5 class="font-weight-bolder mb-0">
-                    2,300
-                    <span class="text-success text-sm font-weight-bolder">+3%</span>
+                    {{numberOfFormations}}
+                    
                   </h5>
                 </div>
               </div>
@@ -52,10 +52,9 @@
             <div class="row">
               <div class="col-8">
                 <div class="numbers">
-                  <p class="text-sm mb-0 text-capitalize font-weight-bold">New Clients</p>
+                  <p class="text-sm mb-0 text-capitalize font-weight-bold">Nombre Entreprises</p>
                   <h5 class="font-weight-bolder mb-0">
-                    +3,462
-                    <span class="text-danger text-sm font-weight-bolder">-2%</span>
+                    {{numberOfEntreprise}}
                   </h5>
                 </div>
               </div>
@@ -68,28 +67,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xl-3 col-sm-6">
-        <div class="card">
-          <div class="card-body p-3">
-            <div class="row">
-              <div class="col-8">
-                <div class="numbers">
-                  <p class="text-sm mb-0 text-capitalize font-weight-bold">Sales</p>
-                  <h5 class="font-weight-bolder mb-0">
-                    $103,430
-                    <span class="text-success text-sm font-weight-bolder">+5%</span>
-                  </h5>
-                </div>
-              </div>
-              <div class="col-4 text-end">
-                <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
-                  <i class="ni ni-cart text-lg opacity-10" aria-hidden="true"></i>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+     
     </div>
     <div class="row mt-4">
       <div class="col-lg-7 mb-lg-0 mb-4">
@@ -111,7 +89,7 @@
                 <div class="bg-gradient-primary border-radius-lg h-100">
                   <img src="../assets/img/shapes/waves-white.svg" class="position-absolute h-100 w-50 top-0 d-lg-block d-none" alt="waves">
                   <div class="position-relative d-flex align-items-center justify-content-center h-100">
-                    <img class="w-100 position-relative z-index-2 pt-4" src="../assets/img/illustrations/rocket-white.png" alt="rocket">
+                    <img class="w-100 position-relative z-index-2 " src="../assets/img/illustrations/images.jpeg" alt="rocket">
                   </div>
                 </div>
               </div>
@@ -121,7 +99,7 @@
       </div>
       <div class="col-lg-5">
         <div class="card h-100 p-3">
-          <div class="overflow-hidden position-relative border-radius-lg bg-cover h-100" style="background-image: url('../assets/img/ivancik.jpg');">
+          <div class="overflow-hidden position-relative border-radius-lg bg-cover h-100" style="background-image: url('../assets/img/forma.jpeg');">
             <span class="mask bg-gradient-dark"></span>
             <div class="card-body position-relative z-index-1 d-flex flex-column h-100 p-3">
               <h5 class="text-white font-weight-bolder mb-4 pt-2">Work with the rockets</h5>
