--- a/src/app/welcome/nav/nav.component.html
+++ b/src/app/welcome/nav/nav.component.html
@@ -20,11 +20,11 @@
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+          <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
         </form>
         <ul class="navbar-nav ">
             <li class="nav-item">
-                <a class="nav-link" href="#">Sign In</a>
+                <a routerLink="login" class="nav-link" href="#">Sign In</a>
             </li>
         </ul>
       </div>
