--- a/src/app/welcome/nav/nav.component.html
+++ b/src/app/welcome/nav/nav.component.html
@@ -25,6 +25,8 @@
         <ul class="navbar-nav ">
             <li class="nav-item">
                 <a routerLink="login" class="nav-link" href="#">Sign In</a>
+            </li><li class="nav-item">
+                <a routerLink="freejoin" class="nav-link" href="#">Join In For Free</a>
             </li>
         </ul>
       </div>
