--- a/src/app/dashboard/formation/form2/form2.component.html
+++ b/src/app/dashboard/formation/form2/form2.component.html
@@ -29,6 +29,11 @@
               <label for="exampleInputPassword1" class="form-label">cout</label>
               <input type="text" class="form-control" [(ngModel)]="formation.cout" name="remarques">
             </div>
+            <div class="mb-3">
+              <label for="exampleInputEmail1" class="form-label">Image</label>
+              <input type="text" class="form-control"  [(ngModel)]="formation.img" name="img" >
+              
+            </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
     </div>
