--- a/src/app/dashboard/formation/table2/table2.component.html
+++ b/src/app/dashboard/formation/table2/table2.component.html
@@ -40,7 +40,7 @@
               <span class="text-secondary text-xs font-weight-bold">{{ student.nombreHeures }}</span>
             </td>
             <td class="align-middle text-center">
-              <span class="text-secondary text-xs font-weight-bold">{{ student.cout }}</span>
+              <span class="text-secondary text-xs font-weight-bold">{{ student.cout }}$</span>
             </td>
             <td class="align-middle">
               <a href="javascript:;" class="font-weight-bold text-xs btn btn-bleu" data-toggle="tooltip" data-original-title="Delete user"
