--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -23,23 +23,20 @@
           <div class="card shadow-2-strong" style="border-radius: 1rem;">
             <div class="card-body p-5 text-center">
 
-              <h3 class="mb-5">Sign in</h3>
-
+             <h3 class="mb-5">Sign in</h3>
+             <form (submit)="loginUser()">
               <div class="form-outline mb-4">
-                <input type="email" id="typeEmailX-2" class="form-control form-control-lg" />
+                <input type="email" id="typeEmailX-2" class="form-control form-control-lg" [(ngModel)]="credentials.username" name="username" required/>
                 <label class="form-label" for="typeEmailX-2">Email</label>
               </div>
 
               <div class="form-outline mb-4">
-                <input type="password" id="typePasswordX-2" class="form-control form-control-lg" />
+                <input type="password" id="typePasswordX-2" class="form-control form-control-lg" [(ngModel)]="credentials.password"  name="password" required />
                 <label class="form-label" for="typePasswordX-2">Password</label>
               </div>
 
-              <!-- Checkbox -->
-              <div class="form-check d-flex justify-content-start mb-4">
-                <input class="form-check-input" type="checkbox" value="" id="form1Example3" />
-                <label class="form-check-label" for="form1Example3"> Remember password </label>
-              </div>
+             
+              
 
               <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
               <div>
@@ -47,6 +44,7 @@
                     <a routerLink="/register" href="#" class="text-black-50 fw-bold">Sign Up</a>
                 </p>
               </div>
+             </form>
             </div>
             
           </div>
@@ -57,3 +55,13 @@
 
 </body>
 </html>
+
+<!-- login.component.html -->
+<!-- login.component.html -->
+
+<br><br><br><br>
+
+
+
+
+
