--- a/src/app/welcome/nav/nav.component.html
+++ b/src/app/welcome/nav/nav.component.html
@@ -1,34 +1,45 @@
 <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
     <div class="container-fluid">
-      <a routerLink="welcome" class="navbar-brand" href="#">App</a>
+      <a routerLink="home" class="navbar-brand" href="#">App</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarCollapse">
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
           <li class="nav-item">
-            <a class="nav-link active" routerLink="welcome/home"  routerLinkActive="active"aria-current="page" href="#">Home</a>
+            <a class="nav-link active" routerLink="home"  routerLinkActive="active"aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a  routerLink="welcome/about"  class="nav-link" href="#">About Us</a>
+            <a  routerLink="about"  class="nav-link" href="#">About Us</a>
           </li>
           <li class="nav-item">
-            <a  routerLink="pageformation"  class="nav-link" href="#">Formation</a>
-          </li><li class="nav-item">
-            <a  routerLink="formateur"  class="nav-link" href="#">Formateurs</a>
+            <a  routerLink="pageformation"  class="nav-link" >Formation</a>
+          </li>
+          <li class="nav-item" *ngIf="menuType==='default'">
+            <a  routerLink="formateur"  class="nav-link">Formateurs</a>
           </li>
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <!-- <button class="btn btn-outline-success" type="submit">Search</button> -->
         </form>
-        <ul class="navbar-nav ">
+        <div [ngSwitch]="menuType">
+        <ul *ngSwitchCase="'default'" class="navbar-nav ">
             <li class="nav-item">
                 <a routerLink="login" class="nav-link" href="#">Sign In</a>
             </li><li class="nav-item">
                 <a routerLink="freejoin" class="nav-link" href="#">Join In For Free</a>
             </li>
-        </ul>
+          </ul>
+
+          <ul *ngSwitchCase="'seller'" class="navbar-nav ">
+            <li class="nav-item">
+                <a class="nav-link" (click)="logout()">Logout</a>
+            </li><li class="nav-item">
+                <a routerLink="freejoin" class="nav-link" href="#">{{ userFirstName}}</a>
+            </li>
+          </ul>
+        </div>
       </div>
 
     </div>
