--- a/src/app/welcome/home/carousel/carousel.component.html
+++ b/src/app/welcome/home/carousel/carousel.component.html
@@ -1,48 +1,34 @@
 <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-indicators">
-        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      <button
+        *ngFor="let student of formations; let i = index"
+        type="button"
+        data-bs-target="#myCarousel"
+        [attr.data-bs-slide-to]="i"
+        [class.active]="i === 0"
+        [attr.aria-label]="'Slide ' + (i + 1)"
+      ></button>
     </div>
     <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img id="img" src="https://www.shutterstock.com/image-photo/photo-amazed-shocked-young-woman-600nw-1928233076.jpg" class="d-block w-100" alt="Slide 1">
-            <div class="container">
-                <div class="carousel-caption text-start">
-                    <h1>Example headline 1.</h1>
-                    <p>Your content for the first slide.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
-                </div>
-            </div>
+      <div class="carousel-item" *ngFor="let student of formations; let i = index" [class.active]="i === 0">
+        <!-- Your existing slide content goes here -->
+        <img id="img" src="{{ student.img }}" class="d-block w-100" alt="Slide {{ i + 1 }}">
+        <div class="container">
+          <div class="carousel-caption text-start">
+            <h1>{{ student.titre }}</h1>
+            <p>{{ student.programmeDetaille }}</p>
+            <p><a class="btn btn-lg btn-primary" routerLink="/pageformation" href="#">Sign up today</a></p>
+          </div>
         </div>
-        <div class="carousel-item">
-            <img id="img"src="https://www.shutterstock.com/image-photo/photo-amazed-shocked-young-woman-600nw-1928233076.jpg" class="d-block w-100" alt="Slide 2">
-            <div class="container">
-                <div class="carousel-caption">
-                    <h1>Example headline 2.</h1>
-                    <p>Your content for the second slide.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
-                </div>
-            </div>
-        </div>
-        <div class="carousel-item">
-            <img  id="img" src="https://www.shutterstock.com/image-photo/photo-amazed-shocked-young-woman-600nw-1928233076.jpg" class="d-block w-100" alt="Slide 3">
-            <div class="container">
-                <div class="carousel-caption text-end">
-                    <h1>Example headline 3.</h1>
-                    <p>Your content for the third slide.</p>
-                    <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
     </button>
     <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
     </button>
-</div>
-
+  </div>
+  
