--- a/src/app/welcome/nav/nav.component.html
+++ b/src/app/welcome/nav/nav.component.html
@@ -13,7 +13,7 @@
             <a  routerLink="about"  class="nav-link" href="#">About Us</a>
           </li>
           <li class="nav-item">
-            <a  routerLink="pageformation"  class="nav-link" >Formation</a>
+            <a  routerLink="/pageformation"  class="nav-link" >Formation</a>
           </li>
           <li class="nav-item" *ngIf="menuType==='default'">
             <a  routerLink="formateur"  class="nav-link">Formateurs</a>
@@ -28,7 +28,7 @@
             <li class="nav-item">
                 <a routerLink="login" class="nav-link" href="#">Sign In</a>
             </li><li class="nav-item">
-                <a routerLink="freejoin" class="nav-link" href="#">Join In For Free</a>
+                <a  class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#joinModal">Join In For Free</a>
             </li>
           </ul>
 
@@ -44,3 +44,36 @@
 
     </div>
   </nav>
+  <!-- Modal HTML structure -->
+<div class="modal fade" id="joinModal" tabindex="-1" aria-labelledby="joinModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h1 class="modal-title" id="joinModalLabel"style="font-size:1.6em">Sign up with your organization</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">X</button>
+          </div>
+          <div class="modal-body">
+              <!-- Add your modal content here -->
+              <!-- For example, a form to collect user details -->
+              <form>
+                  <div class="mb-3">
+                    
+                      <label for="organization" class="form-label">ENTER YOUR ORGANIZATION URL
+                      </label>
+                      <input type="text" class="form-control" id="organization" placeholder="(ex: company.com or company.org)">
+
+                    </div>
+                    <button type="button" class="btn btn-primary ">Continue</button>
+
+                  <!-- Add more form fields as needed -->
+              </form>
+          </div>
+          <div class="modal-footer">
+            <div>
+              <p class="mb-3">Back To 
+                  <a routerLink="/register" href="#" class="text-black-50 fw-bold">Sign Up</a>
+              </p>
+            </div> </div>
+      </div>
+  </div>
+</div>
