--- a/src/app/dashboard/entreprise/table3/table3.component.html
+++ b/src/app/dashboard/entreprise/table3/table3.component.html
@@ -2,7 +2,7 @@
 <div class="card-header pb-0">
     <h6 class="fs-4 fw-bolder">Entreprise table 
 
-      <a routerLink="Form3" routerLinkActive="active" href="#" class="btn btn-primary" tabindex="-1" aria-disabled="true" role="button" data-bs-toggle="button" style="margin-left: 600px;">Add Formateur</a>
+      <a routerLink="Form3" routerLinkActive="active" href="#" class="btn btn-primary" tabindex="-1" aria-disabled="true" role="button" data-bs-toggle="button" style="margin-left: 600px;">Add Entreprise</a>
     </h6>
     
   </div>
