--- a/src/app/dashboard/formateur/form/form.component.html
+++ b/src/app/dashboard/formateur/form/form.component.html
@@ -21,6 +21,10 @@
                       <label for="exampleInputPassword1" class="form-label">remarques</label>
                       <input type="text" class="form-control" [(ngModel)]="formateur.remarques" name="remarques">
                     </div>
+                    <div class="mb-3">
+                      <label for="exampleInputPassword1" class="form-label">image</label>
+                      <input type="text" class="form-control" [(ngModel)]="formateur.img" name="img">
+                    </div>
                    
                     <button type="submit" class="btn btn-primary">Submit</button>
                   </form>
