--- a/src/app/dashboard/categorie/tablecategorie/tablecategorie.component.html
+++ b/src/app/dashboard/categorie/tablecategorie/tablecategorie.component.html
@@ -26,7 +26,7 @@
               <div class="d-flex px-2 py-1">
                 
                 <div class="d-flex flex-column justify-content-center">
-                  <h6 class="mb-0 text-sm">{{ student.nomCategorie }}</h6>
+                  <h6 class="mb-0 text-sm">{{ student.nom }}</h6>
                 </div>
               </div>
             </td>
