--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -56,6 +56,9 @@
                 <input type="text" class="form-control" placeholder="Type here...">
               </div>
             </div>
+            <div>
+              <a class="nav-link" (click)="logout()">Logout</a>
+            </div>
             <ul class="navbar-nav  justify-content-end">
               
               
