--- a/src/app/welcome/nav/nav.component.html
+++ b/src/app/welcome/nav/nav.component.html
@@ -18,6 +18,9 @@
           <li class="nav-item" *ngIf="menuType==='default'">
             <a  routerLink="formateur"  class="nav-link">Formateurs</a>
           </li>
+          <li class="nav-item" *ngIf="menuType==='seller'">
+            <a  routerLink="afficheforma"  class="nav-link">mes Formations</a>
+          </li>
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
