--- a/src/app/welcome/home/carousel/carousel.component.html
+++ b/src/app/welcome/home/carousel/carousel.component.html
@@ -15,7 +15,7 @@
         <img id="img" src="{{ student.img }}" class="d-block w-100" alt="Slide {{ i + 1 }}">
         <div class="container">
           <div class="carousel-caption text-start">
-            <p><a class="btn btn-lg btn-primary" routerLink="/pageformation" href="#">Sign up today</a></p>
+            <p><a class="btn btn-lg btn-primary" [routerLink]="['/dettailformation', student.id]" href="#">Sign up today</a></p>
           </div>
         </div>
       </div>
