--- a/src/app/welcome/affiche-formation/affiche-formation.component.html
+++ b/src/app/welcome/affiche-formation/affiche-formation.component.html
@@ -1,10 +1,28 @@
-<div *ngIf="formations.length > 0; else emptyCart">
-    <div *ngFor="let formation of formations">
-      3ttttttttttttttttttttttttttttttttttttttttttt3ttttttttttttttttttttttttttttttttttttttttttt3ttttttttttttttttttttttttttttttttttttttttttt3ttttttttttttttttttttttttttttttttttttttttttt
-    </div>
-  </div>
-  <ng-template #emptyCart>
-    <p>User's cart is empty.</p>
-  </ng-template>
+
+<br><br><br>
+<table class="table">
+    <thead class="thead-dark" style="background-color: #cb0c9f ;">
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Titre</th>
+        <th scope="col">Objectif</th>
+        <th scope="col">Programme_Detaille</th>
+        <th scope="col">Heures</th>
+      </tr>
+    </thead>
+    <tbody>
+      
+      <tr *ngFor="let formation of formations">
+        <th scope="row">{{ formation.id }}</th>
+        <td>{{ formation.titre }}</td>
+        <td>{{ formation.objectifs }}</td>
+        <td>{{ formation.programmeDetaille }}</td>
+        <td>{{ formation.nombreHeures }}</td>
+      </tr>
+    </tbody>
+  </table>
+  
+  
+
   
   
