--- a/src/app/welcome/pageformation/pageformation.component.html
+++ b/src/app/welcome/pageformation/pageformation.component.html
@@ -12,12 +12,13 @@
             {{ student.programmeDetaille }}
           </p>
           <p>Heure:{{ student.nombreHeures }}hr</p>
-          <a *ngIf="userRole=='USER'; else notAdmin" [routerLink]="['/dettailformation', student.id]" href="#" class="read-more">
+          <a *ngIf="userRole=='USER'|| userRole === 'Formateur'; else notAdmin" [routerLink]="['/dettailformation', student.id]" href="#" class="read-more">
             Read more 
             <svg xmlns="http://www.w3.org/2000/svg" class="icon" viewBox="0 0 20 20" fill="currentColor">
               <path fill-rule="evenodd" d="M12.293 5.293a1 1 0 011.414 0l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-2.293-2.293a1 1 0 010-1.414z" clip-rule="evenodd" />
             </svg>
           </a>
+          
           <ng-template #notAdmin>
           <a routerLink="/register" href="#" class="read-more">
             Inscription  
