--- a/src/app/welcome/nav/nav.component.html
+++ b/src/app/welcome/nav/nav.component.html
@@ -65,7 +65,7 @@
       <div class="modal-content">
           <div class="modal-header">
               <h1 class="modal-title" id="joinModalLabel"style="font-size:1.6em">Sign up with your organization</h1>
-              <button type="button" class="btn-close text-black-50"data-bs-dismiss="modal" aria-label="Close">X</button>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">X</button>
           </div>
           <div class="modal-body">
               <!-- Add your modal content here -->
@@ -74,23 +74,22 @@
                 <!-- Default menu content -->
                 <form>
                   <div class="mb-3">
-
-                    
-                      <label for="organizationUrl" class="form-label">ENTER YOUR ORGANIZATION URL
-                      </label>
-                      <input [(ngModel)]="organizationUrl" type="text" class="form-control" id="organizationUrl" placeholder="(ex: company.com or company.org)">
-
-                    </div>
-                    <button (click)="onContinueClick()" type="button" class="btn btn-primary" >Continue</button>
-
-                  <!-- Add more form fields as needed -->
-              </form>
-
+                    <label for="organization" class="form-label">ENTER YOUR ORGANIZATION URL</label>
+                    <input type="text" class="form-control" id="organization" placeholder="(ex: company.com or company.org)" [(ngModel)]="organizationUrl">
+                  </div>
+              
+                  <div *ngIf="isEmailExists" class="alert alert-danger" role="alert">
+                    Error: Email already exists
+                  </div>
+              
+                  <button type="button" class="btn btn-primary" (click)="onContinue()">Continue</button>
+                </form>
+              </div>
           </div>
           <div class="modal-footer">
             <div>
               <p class="mb-3">Back To 
-                  <a routerLink="/register" href="#" class="text-black-50 fw-bold" data-bs-dismiss="modal" >Sign Up</a>
+                  <a routerLink="/register" href="#" class="text-black-50 fw-bold">Sign Up</a>
               </p>
             </div>
            </div>
